# nlq_lang_graph_poc_docker

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  config.py  pyproject.toml  setup.py  streamlit_nlq_18_jun_log.txt
lang_graph_poc/agents/: sql_agent.py
lang_graph_poc/llm/: __init__.py  openai.py  system_prompt.txt
lang_graph_poc/resources/: t1_bookings_all.sql  t1_bookings_all_samples_nlq copy.sql  t1_bookings_all_samples_nlq.sql  t2_bi_booking_sessions_sample_nlq.sql
lang_graph_poc/tools/: redshift.py
requirements/: base.txt  dev.txt
streamlit_apps/: app_main.py  streamlit_app_0.py  streamlit_app_1.py  streamlit_app_12jun2025.py  streamlit_app_17Jun2025.py
tests/: test_agent.py
