[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lang_graph_poc"
version = "0.1.0"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
description = "A POC for SQL Agent using LangGraph"
requires-python = ">=3.10"
dependencies = [
    "langchain-core>=0.1.0",
    "langchain-openai>=0.0.5",
    "langgraph>=0.0.10",
    "psycopg2-binary>=2.9.9",
    "pandas>=2.1.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.12.0",
    "flake8>=7.0.0",
]